[package]
name = "cw-storage"
version = "0.2.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "CosmWasm library with useful helpers for Storage patterns"
repository = "https://github.com/CosmWasm/cw-storage"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
circle-ci = { repository = "CosmWasm/cw-storage", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
cosmwasm = "~0.7.0"
serde = { version = "~1.0.103", default-features = false, features = ["derive", "alloc"] }
snafu = { version = "~0.5.0", default-features = false, features = ["rust_1_30"] }
schemars = "~0.5"
